# standby

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  README.md  VISION.md  design-contract.md  package.json
backlog.d/: 001-operator-controlled-proposal-requests.md  002-worker-job-observability-and-recovery.md  003-speaker-attribution-v1.md  004-tool-capable-worker-profile-boundary.md  005-live-speaker-diarization-or-provider-attribution.md  006-recover-worker-queue-after-daemon-restart.md  007-ai-first-proposal-agent.md  008-secure-approval-and-ai-execution-gate.md  009-default-opencode-subagent-worker.md  010-shadcn-style-ui-and-visual-qa.md  011-proposal-quality-eval-harness.md  012-secure-networked-worker-boundary.md  013-close-the-loop-act-on-result.md  014-capture-reliability-full-call.md  015-worker-cost-spend-observability.md  016-collapse-post-omp-dead-surface.md  017-cold-agent-readiness-and-docs-hygiene.md  018-signed-app-install-and-grant-flow.md  019-data-lifecycle-and-recovery-verbs.md  020-dynamic-proposal-agent.md  021-adopt-misty-step-comic-ops-aesthetic.md  021-async-proposal-generation.md
crates/standbyd/: Cargo.toml
crates/standbyd/src/: capture.rs  main.rs
crates/tacetd/: Cargo.toml
crates/tacetd/src/: main.rs
docs/: plan.html  real-meeting-followups.md  vision.md
scripts/: build-capture-helper.sh  capture-ui-state.mjs  verify-ai-execution-security.sh  verify-async-proposal-ingest.sh  verify-capture-longrun.sh  verify-capture-meeting-duration.sh  verify-ci.sh  verify-live-append-feed.sh  verify-live-model-proposal.sh  verify-live-speaker-attribution.sh  verify-live-teams-local.sh  verify-local-capture-smoke.sh  verify-local-transcript-fixture.sh  verify-manual-proposal-request.sh  verify.sh  (+12 more)
(+237 files in other folders)
