[package]
name = "standbyd"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
standby-core = { path = "../standby-core" }
tokio = { workspace = true, features = ["process", "io-util", "time"] }
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
